@@ -149,12 +149,12 @@ class AjaxForm {
 			}
 		}
 
-		if(!empty($this->modx->placeholders[$plPrefix.'error.recaptcha'])) {
-			$errors['recaptcha'] = $this->modx->placeholders[$plPrefix.'error.recaptcha'];
+		if (!empty($this->modx->placeholders[$plPrefix . 'error.recaptcha'])) {
+			$errors['recaptcha'] = $this->modx->placeholders[$plPrefix . 'error.recaptcha'];
 		}
 
-		if(!empty($this->modx->placeholders[$plPrefix.'error.recaptchav2_error'])) {
-			$errors['recaptcha'] = $this->modx->placeholders[$plPrefix.'error.recaptchav2_error'];
+		if (!empty($this->modx->placeholders[$plPrefix . 'error.recaptchav2_error'])) {
+			$errors['recaptcha'] = $this->modx->placeholders[$plPrefix . 'error.recaptchav2_error'];
 		}
 		
 		if (!empty($errors)) {
